implemented authentication and logout. Improved navbar. Added route protection

--- a/src/components/LoginForm/LoginForm.module.css
+++ b/src/components/LoginForm/LoginForm.module.css
@@ -48,12 +48,13 @@
     margin-top: 4px;
 }
 
-.label {
+.label, .error {
     padding-left: 12px;
 }
 
 .error {
     color: var(--error);
+    margin-bottom: -12px;
 }
 
 .form {
